--- a/src/components/InfoCard/InfoCard.css
+++ b/src/components/InfoCard/InfoCard.css
@@ -39,11 +39,13 @@
     
 }
 
-.profPic {
-    width: 450px;
-}
-
 #textInfo {
     font-family: 'Josefin Sans', sans-serif;
     color: #B3A20B
+}
+
+
+
+#profPic {
+    width: 450px;
 }
